argocd/dummy-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: dummy-app
  template:
    metadata:
      labels:
        app: dummy-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
