argocd/dummy-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-app
  namespace: default
spec:
  selector:
    app: dummy-app
  ports:
  - port: 80
    targetPort: 80
